hphp/hack/test/typecheck/reactive/mutability_flavors1.php.exp
File "mutability_flavors1.php", line 8, characters 3-4:
Cannot assign immutable value to mutably-owned local variable. Mutability flavor of local variable cannot be altered. (Typing[4294])
